fix(MetaItem): menu z-index issue

--- a/src/common/MetaItem/styles.less
+++ b/src/common/MetaItem/styles.less
@@ -158,6 +158,7 @@
         }
 
         .menu-label-container {
+            z-index: 1;
             flex: none;
             width: 1.5rem;
             height: 4rem;
